unpackaged/main/default/objects/ffct__BundleComponent__c/ffct__BundleComponent__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffct__bundlecomponentonlinehelp</customHelpPage>
    <description>Information about a bundle component.</description>
    <label>Bundle Component</label>
    <nameField>
        <label>Bundle Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BundleComponent</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>