unpackaged/main/default/objects/ffct__BundleComponent__c/fields/ffct__ApexCode__c.field-meta.xml
<CustomField>
    <fullName>ffct__ApexCode__c</fullName>
    <label>ApexCode</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>