unpackaged/main/default/objects/ffct__BundleComponent__c/fields/ffct__AsyncId__c.field-meta.xml
<CustomField>
    <fullName>ffct__AsyncId__c</fullName>
    <label>Async D</label>
    <length>18</length>
    <type>Text</type>
</CustomField>