unpackaged/main/default/objects/ffct__BundleComponent__c/fields/ffct__Bundle__c.field-meta.xml
<CustomField>
    <fullName>ffct__Bundle__c</fullName>
    <label>Bundle</label>
    <referenceTo>ffct__Bundle__c</referenceTo>
    <relationshipLabel>Bundle Component</relationshipLabel>
    <relationshipName>BundleComponent</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>