unpackaged/main/default/objects/ffct__BundleComponent__c/fields/ffct__FieldsToWhitelist__c.field-meta.xml
<CustomField>
    <fullName>ffct__FieldsToWhitelist__c</fullName>
    <label>FieldsToBlacklist</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>