unpackaged/main/default/objects/ffct__BundleComponent__c/fields/ffct__InProgress__c.field-meta.xml
<CustomField>
    <fullName>ffct__InProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Progress</label>
    <type>Checkbox</type>
</CustomField>