unpackaged/main/default/objects/ffct__BundleComponent__c/fields/ffct__Skipped__c.field-meta.xml
<CustomField>
    <fullName>ffct__Skipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skipped</label>
    <type>Checkbox</type>
</CustomField>