unpackaged/main/default/objects/ffct__BundleComponent__c/fields/ffct__Type__c.field-meta.xml
<CustomField>
    <fullName>ffct__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metadata</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>InstalledPackage</fullName>
            </value>
            <value>
                <fullName>MetadataPermissionSet</fullName>
            </value>
            <value>
                <fullName>MetadataProfile</fullName>
            </value>
            <value>
                <fullName>SecondaryMetadata</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>