unpackaged/main/default/objects/ffct__BundleComponent__c/validationRules/ffct__Blank_Apex_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>ffct__Blank_Apex_Code</fullName>
    <active>true</active>
    <description>If BundleComponent Type is Apex then ApexCode TextArea should not be blank.</description>
    <errorConditionFormula>CONTAINS( TEXT( ffct__Type__c ) , 'Apex')  &amp;&amp;  ISBLANK( ffct__ApexCode__c )</errorConditionFormula>
    <errorMessage>Enter Apex Code to be executed or choose BundleComponent Type other than 'Apex'.</errorMessage>
</ValidationRule>