unpackaged/main/default/objects/ffct__BundleComponent__c/validationRules/ffct__Blank_Package_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>ffct__Blank_Package_Name</fullName>
    <active>true</active>
    <description>If Bundle Component Type is selected as Installed Package then Package Name should not be empty</description>
    <errorConditionFormula>CONTAINS( TEXT( ffct__Type__c ) , 'InstalledPackage')  &amp;&amp;  ISBLANK( ffct__PackageName__c )</errorConditionFormula>
    <errorMessage>Enter Package Name  to be installed or choose BundleComponent Type other than 'InstalledPackage'.</errorMessage>
</ValidationRule>