unpackaged/main/default/objects/ffct__BundleComponent__c/validationRules/ffct__Blank_Package_Version.validationRule-meta.xml
<ValidationRule>
    <fullName>ffct__Blank_Package_Version</fullName>
    <active>true</active>
    <description>If Bundle Component Type is selected as Installed Package then Package  Version should not be empty</description>
    <errorConditionFormula>CONTAINS( TEXT( ffct__Type__c ) , 'InstalledPackage')  &amp;&amp;  ISBLANK(  ffct__PackageVersion__c )</errorConditionFormula>
    <errorMessage>Enter Package Version to be installed or choose BundleComponent Type other than 'InstalledPackage'.</errorMessage>
</ValidationRule>