unpackaged/main/default/objects/ffct__BundleComponent__c/validationRules/ffct__BundleComponent_Type_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>ffct__BundleComponent_Type_Mandatory</fullName>
    <active>true</active>
    <description>Type field of BundleComponent Object is mandatory</description>
    <errorConditionFormula>ISBLANK( TEXT( ffct__Type__c ) )</errorConditionFormula>
    <errorMessage>BundleComponent Type is mandatory field. It cannot be left blank.</errorMessage>
</ValidationRule>